k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector: # ClusterIP here will provide access to our client-pods which has a label key value pair of component:web, this means this ClusterIP here need to have a selector of component:web to find the client-pod, which it could provide access to
    component: web
  ports: # ClusterIP does not have a nodePort, it only have a Port and TargetPort, Port allows other Pod that needs access to the multi-client pod, while targetPort exposed the port of the multi-client Pod
    - port: 3000 # Use the same port because we want other Object to access the ClusterIP service and at the same time get access to the deployment multi-client pod
      targetPort: 3000
