k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
# UPDATE THE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # Tell k8s to create a controller based on the nginx project
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD THIS LINE ABOVE
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # Configured on how the actual copy of nginx going to behave, if the incoming request is /api it will remove the /api and then route it to the Server
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
          - path: /?(.*) # Routing rule if the incoming traffic is / then route it to the client
            # UPDATE THIS LINE ABOVE
            backend:
              serviceName: client-cluster-ip-service # ClusterIP name to get access to the client
              servicePort: 3000
          - path: /api/?(.*) # Routing rule if the incoming traffic is /api then route it to the server
            # UPDATE THIS LINE ABOVE
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
